user-service/kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: user-service
    version: v1
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
      version: v1
  template:
    metadata:
      labels:
        app: user-service
        version: v1
    spec:
      containers:
        - name: user-service
          image: sangdongvan/istio-sample-user-service:0.1.5-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 18027
              name: http
              protocol: TCP
            - containerPort: 8778
              name: jolokia
              protocol: TCP
            - containerPort: 9779
              name: prometheus
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /uaa/health
              port: 18027
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /uaa/health
              port: 18027
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 1
          securityContext:
            privileged: false
