user-service/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 18027
  selector:
    app: user-service
