user-service/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-service-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: user-service-ip
  labels:
    app: user-service
spec:
  backend:
    serviceName: user-service
    servicePort: 80
